fs_thmb_viewport responsive visible fix

--- a/css/fs_gllaery.css
+++ b/css/fs_gllaery.css
@@ -271,7 +271,11 @@ Version: 0.1
 
 @media only screen and (max-width: 760px) {
     .fs_thmb_viewport {
-        display: block;
+        display: inline-block;
+        overflow: hidden;
+        line-height: 1;
+        width:2000px;
+        height:auto;
     }
 
     .fs_title_wrapper {
